@@ -126,12 +126,12 @@ NameChars       = /(?:_|:|-|\.|[A-Z]|[a-z]|[0-9]
 #
 #######################################################################
 
-Misc            = { Comment | PI | ~ }+
+Misc            = { Comment | PI | S }+
 Comment         = '<!--' { CommentChars | /-(?!-)/ } ~ '-->'
 PI              = '<?' PITarget [~ PIChars] '?>'
 PITarget        = !/X|xM|mL|l/ Name
 CDSect          = '<![CDATA[' CData ']]>'
-
+S               = /\s+/
 
 #######################################################################
 #
