@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "DHParser"
-version = "1.4.2"
+version = "1.5.0"
 description = "Parser Generator and DSL-construction-kit"
 
 license = "Apache-2"
